force-app/main/default/objects/Lead/fields/How_Soon_Making_Money__c.field-meta.xml
<CustomField>
    <fullName>How_Soon_Making_Money__c</fullName>
    <label>How Soon Making Money?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Week</fullName>
            </value>
            <value>
                <fullName>One Month</fullName>
            </value>
            <value>
                <fullName>Three Months</fullName>
            </value>
            <value>
                <fullName>One Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>