force-app/main/default/objects/Lead/fields/Inquiring_About__c.field-meta.xml
<CustomField>
    <fullName>Inquiring_About__c</fullName>
    <label>Inquiring About</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Services</fullName>
            </value>
            <value>
                <fullName>Back Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Business CPA</fullName>
            </value>
            <value>
                <fullName>Business Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Start a Business</fullName>
            </value>
            <value>
                <fullName>Tax Advisory</fullName>
            </value>
            <value>
                <fullName>Tax Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>