force-app/main/default/objects/Lead/fields/Internal_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_Lead_ID__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Internal Lead ID</label>
    <type>AutoNumber</type>
</CustomField>