force-app/main/default/objects/Lead/fields/Last_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Import_Date__c</fullName>
    <label>Last Import Date</label>
    <type>DateTime</type>
</CustomField>