force-app/main/default/objects/Lead/fields/lead_btp__c.field-meta.xml
<CustomField>
    <fullName>lead_btp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lead btp</label>
    <type>Checkbox</type>
</CustomField>