force-app/main/default/objects/Lead/fields/Lead_Conversion_Note__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Note__c</fullName>
    <label>Lead Conversion Note</label>
    <type>TextArea</type>
</CustomField>