force-app/main/default/objects/Lead/fields/Lead_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>Lead_OwnerID__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead OwnerID</label>
    <type>Text</type>
</CustomField>