force-app/main/default/objects/Lead/fields/Lead_Source_copy__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_copy__c</fullName>
    <formula>TEXT(LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source copy</label>
    <type>Text</type>
</CustomField>