force-app/main/default/objects/Lead/fields/Lead_Source_New__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_New__c</fullName>
    <label>Lead Source New</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1-800Accountant</fullName>
            </value>
            <value>
                <fullName>1-800-Company</fullName>
            </value>
            <value>
                <fullName>1800Corp.com</fullName>
            </value>
            <value>
                <fullName>Agents &amp; Corporations</fullName>
            </value>
            <value>
                <fullName>Bambee</fullName>
            </value>
            <value>
                <fullName>Betterfin</fullName>
            </value>
            <value>
                <fullName>BetterLegal</fullName>
            </value>
            <value>
                <fullName>Big Commerce</fullName>
            </value>
            <value>
                <fullName>BizFilings</fullName>
            </value>
            <value>
                <fullName>BK Search</fullName>
            </value>
            <value>
                <fullName>Bluehost</fullName>
            </value>
            <value>
                <fullName>Building Trades</fullName>
            </value>
            <value>
                <fullName>Business.com</fullName>
            </value>
            <value>
                <fullName>Business Licenses</fullName>
            </value>
            <value>
                <fullName>Business Talent Group</fullName>
            </value>
            <value>
                <fullName>Cartinsight</fullName>
            </value>
            <value>
                <fullName>Clearbanc</fullName>
            </value>
            <value>
                <fullName>ClientBooks</fullName>
            </value>
            <value>
                <fullName>Community Tax</fullName>
            </value>
            <value>
                <fullName>Company.com</fullName>
            </value>
            <value>
                <fullName>Corpnet</fullName>
            </value>
            <value>
                <fullName>Corp Offer</fullName>
            </value>
            <value>
                <fullName>Data Partners</fullName>
            </value>
            <value>
                <fullName>Directincorp</fullName>
            </value>
            <value>
                <fullName>Dun &amp; Bradstreet</fullName>
            </value>
            <value>
                <fullName>EIG</fullName>
            </value>
            <value>
                <fullName>EIN Filing</fullName>
            </value>
            <value>
                <fullName>EIN Tax Filing</fullName>
            </value>
            <value>
                <fullName>EZCorp</fullName>
            </value>
            <value>
                <fullName>Federal Contracting Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>