force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1800Accountant App</fullName>
            </value>
            <value>
                <fullName>1800Acct Homepage</fullName>
            </value>
            <value>
                <fullName>1800Acct MobileHome</fullName>
            </value>
            <value>
                <fullName>Abandoner</fullName>
            </value>
            <value>
                <fullName>Abandoner Non-Buyers</fullName>
            </value>
            <value>
                <fullName>Agent Referral</fullName>
            </value>
            <value>
                <fullName>AL- Franchise / LZ STF</fullName>
            </value>
            <value>
                <fullName>App Download</fullName>
            </value>
            <value>
                <fullName>BA - UA</fullName>
            </value>
            <value>
                <fullName>ben3</fullName>
            </value>
            <value>
                <fullName>Bert Seither Workshop</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Opt In</fullName>
            </value>
            <value>
                <fullName>BPlans Referral</fullName>
            </value>
            <value>
                <fullName>BTP , Business LP, BTOI</fullName>
            </value>
            <value>
                <fullName>BTP, Business LP, LZ STF</fullName>
            </value>
            <value>
                <fullName>BTP, LP, and BTOI</fullName>
            </value>
            <value>
                <fullName>BTP, LP, and Buyer Tax Opt In</fullName>
            </value>
            <value>
                <fullName>BTP, LP, and STF</fullName>
            </value>
            <value>
                <fullName>BTP, LP, STF, and BTOI</fullName>
            </value>
            <value>
                <fullName>BTP and BTOI</fullName>
            </value>
            <value>
                <fullName>BTP and Business LP</fullName>
            </value>
            <value>
                <fullName>BTP and Buyer Tax Opt In</fullName>
            </value>
            <value>
                <fullName>BTP and STF</fullName>
            </value>
            <value>
                <fullName>Business LP</fullName>
            </value>
            <value>
                <fullName>Business LP / LZ STF</fullName>
            </value>
            <value>
                <fullName>Business LP and BTOI</fullName>
            </value>
            <value>
                <fullName>Business LP and Buyer Tax Opt In</fullName>
            </value>
            <value>
                <fullName>Business LP and STF</fullName>
            </value>
            <value>
                <fullName>Business Plan Coachbuy</fullName>
            </value>
            <value>
                <fullName>Business Recovery Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>