force-app/main/default/objects/Lead/fields/Lead_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type_New__c</fullName>
    <description>New multi-select picklist for tracking multiple lead types</description>
    <label>Lead Type New</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1-800Accountant</fullName>
            </value>
            <value>
                <fullName>1800Accountant App</fullName>
            </value>
            <value>
                <fullName>1-800Accountant Registration</fullName>
            </value>
            <value>
                <fullName>1800Acct EIN</fullName>
            </value>
            <value>
                <fullName>1800Acct Homepage</fullName>
            </value>
            <value>
                <fullName>1800Acct MobileHome</fullName>
            </value>
            <value>
                <fullName>1800 BTP</fullName>
            </value>
            <value>
                <fullName>Abandoner</fullName>
            </value>
            <value>
                <fullName>Abandoner Non-Buyers</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Accounting (Business)</fullName>
            </value>
            <value>
                <fullName>Accounting Services</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Agent Referral</fullName>
            </value>
            <value>
                <fullName>App Download</fullName>
            </value>
            <value>
                <fullName>April Newsletter</fullName>
            </value>
            <value>
                <fullName>ASAP Lead</fullName>
            </value>
            <value>
                <fullName>Back to Business</fullName>
            </value>
            <value>
                <fullName>banking_purposes</fullName>
            </value>
            <value>
                <fullName>BAP</fullName>
            </value>
            <value>
                <fullName>BA - UA</fullName>
            </value>
            <value>
                <fullName>Blog Join Now</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Opt In</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Services</fullName>
            </value>
            <value>
                <fullName>BPlans Partner Page Referral</fullName>
            </value>
            <value>
                <fullName>BPlans Referral</fullName>
            </value>
            <value>
                <fullName>BTP</fullName>
            </value>
            <value>
                <fullName>BTP, Business LP</fullName>
            </value>
            <value>
                <fullName>BTP, Business LP, Buyer Tax Opt In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>