force-app/main/default/objects/Lead/fields/Lead_Type_New_Text__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type_New_Text__c</fullName>
    <label>Lead Type New (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>