force-app/main/default/objects/Lead/fields/LifePlan__c.field-meta.xml
<CustomField>
    <fullName>LifePlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LifePlan</label>
    <type>Checkbox</type>
</CustomField>