force-app/main/default/objects/Lead/fields/LLC_Taxation__c.field-meta.xml
<CustomField>
    <fullName>LLC_Taxation__c</fullName>
    <label>LLC Taxation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>