force-app/main/default/objects/Lead/fields/LZ_NonProfit__c.field-meta.xml
<CustomField>
    <fullName>LZ_NonProfit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LZ NonProfit</label>
    <type>Checkbox</type>
</CustomField>