force-app/main/default/objects/Lead/fields/LZ_Note__c.field-meta.xml
<CustomField>
    <fullName>LZ_Note__c</fullName>
    <label>LZ Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>