force-app/main/default/objects/Lead/fields/LZ_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>LZ_Order_Date__c</fullName>
    <label>LZ Order Date</label>
    <type>DateTime</type>
</CustomField>