force-app/main/default/objects/Lead/fields/LZ_Order_Multi__c.field-meta.xml
<CustomField>
    <fullName>LZ_Order_Multi__c</fullName>
    <label>LZ Order Multi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>