force-app/main/default/objects/Lead/fields/LZ_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>LZ_Order_Number__c</fullName>
    <label>LZ Order Number</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>