force-app/main/default/objects/Lead/fields/LZ_Package__c.field-meta.xml
<CustomField>
    <fullName>LZ_Package__c</fullName>
    <label>LZ Package</label>
    <length>64</length>
    <type>Text</type>
</CustomField>