force-app/main/default/objects/Lead/fields/LZ_Process__c.field-meta.xml
<CustomField>
    <fullName>LZ_Process__c</fullName>
    <label>LZ Process</label>
    <length>64</length>
    <type>Text</type>
</CustomField>