force-app/main/default/objects/Lead/fields/Making_Money_Yet__c.field-meta.xml
<CustomField>
    <fullName>Making_Money_Yet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Making Money Yet?</label>
    <type>Checkbox</type>
</CustomField>