force-app/main/default/objects/Lead/fields/Making_Money_Yet_New__c.field-meta.xml
<CustomField>
    <fullName>Making_Money_Yet_New__c</fullName>
    <label>Making Money Yet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No - Very Soon</fullName>
            </value>
            <value>
                <fullName>No - In the Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>