force-app/main/default/objects/Lead/fields/Marketing_Channel_Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel_Last_Touch__c</fullName>
    <label>Marketing Channel (Last Touch)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>