force-app/main/default/objects/Lead/fields/Married__c.field-meta.xml
<CustomField>
    <fullName>Married__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Married?</label>
    <type>Checkbox</type>
</CustomField>