force-app/main/default/objects/Lead/fields/Merchant_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Call_Disposition__c</fullName>
    <label>Merchant Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>