force-app/main/default/objects/Lead/fields/Merchant_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Fulfillment__c</fullName>
    <label>Merchant Fulfillment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>