force-app/main/default/objects/Lead/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <label>Merchant ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>