force-app/main/default/objects/Lead/fields/Merchant_Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Sales_Notes__c</fullName>
    <label>Merchant Sales Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>