force-app/main/default/objects/Lead/fields/Merchant_Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Sales_Status__c</fullName>
    <label>Merchant Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>1-1 Scheduled</fullName>
            </value>
            <value>
                <fullName>1-1 No Show</fullName>
            </value>
            <value>
                <fullName>Pitched</fullName>
            </value>
            <value>
                <fullName>Rate Review</fullName>
            </value>
            <value>
                <fullName>App OUT</fullName>
            </value>
            <value>
                <fullName>App IN</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Bad Number</fullName>
            </value>
            <value>
                <fullName>Dead Lead</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>