force-app/main/default/objects/Lead/fields/Name_on_IRS__c.field-meta.xml
<CustomField>
    <fullName>Name_on_IRS__c</fullName>
    <label>Name on IRS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>