force-app/main/default/objects/Lead/fields/Need_business_funding__c.field-meta.xml
<CustomField>
    <fullName>Need_business_funding__c</fullName>
    <label>Need business funding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>