force-app/main/default/objects/Lead/fields/Need_Funding__c.field-meta.xml
<CustomField>
    <fullName>Need_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Funding?</label>
    <type>Checkbox</type>
</CustomField>