force-app/main/default/objects/Lead/fields/No_Contact_for_5_Months__c.field-meta.xml
<CustomField>
    <fullName>No_Contact_for_5_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Contact for 5 Months</label>
    <type>Checkbox</type>
</CustomField>