force-app/main/default/objects/Lead/fields/Num_of_Agricultural_Employees__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Agricultural_Employees__c</fullName>
    <label># of Agricultural Employees</label>
    <length>50</length>
    <type>Text</type>
</CustomField>