force-app/main/default/objects/Lead/fields/Number_of_Owners__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Owners__c</fullName>
    <label>Number of Owners</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>