force-app/main/default/objects/Lead/fields/Numeric_Phone__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Phone__c</fullName>
    <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone, &apos;.&apos;, &apos;&apos;)  , &apos; &apos;, &apos;&apos;)  , &apos;-&apos;, &apos;&apos;)  , &apos;)&apos;, &apos;&apos;)  , &apos;(&apos;, &apos;&apos;)</formula>
    <label>Numeric Phone</label>
    <type>Text</type>
</CustomField>