force-app/main/default/objects/Lead/fields/of_2019_Calls__c.field-meta.xml
<CustomField>
    <fullName>of_2019_Calls__c</fullName>
    <label># of 2019 Calls</label>
    <length>255</length>
    <type>Text</type>
</CustomField>