force-app/main/default/objects/Lead/fields/of_Days_to_Distribute_Date__c.field-meta.xml
<CustomField>
    <fullName>of_Days_to_Distribute_Date__c</fullName>
    <description>The number of days between the Created Date of the Lead and the Distribute Date</description>
    <formula>Distribute_Date__c -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days between the Created Date of the Lead and the Distribute Date</inlineHelpText>
    <label># of Days to Distribute Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>