force-app/main/default/objects/Lead/fields/of_Emails__c.field-meta.xml
<CustomField>
    <fullName>of_Emails__c</fullName>
    <description>The number of emails sent from Salesforce to the lead</description>
    <label># of Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>