force-app/main/default/objects/Lead/fields/of_TSA_Follow_Up_Calls__c.field-meta.xml
<CustomField>
    <fullName>of_TSA_Follow_Up_Calls__c</fullName>
    <label># of TSA Follow-Up Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>