force-app/main/default/objects/Lead/fields/One_Time_SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>One_Time_SMS_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field triggers the One-Time Campaign SMS process. This process can vary over time.</description>
    <label>One-Time SMS Message</label>
    <type>Checkbox</type>
</CustomField>