force-app/main/default/objects/Lead/fields/Original_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Source__c</fullName>
    <description>The original lead source for a record. Although the standard Lead Source field may change, this value will always indicate the first source for a record.</description>
    <label>Original Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1-800Accountant</fullName>
            </value>
            <value>
                <fullName>Bark</fullName>
            </value>
            <value>
                <fullName>ChaliceNetwork</fullName>
            </value>
            <value>
                <fullName>FileNow</fullName>
            </value>
            <value>
                <fullName>Pex</fullName>
            </value>
            <value>
                <fullName>Savify</fullName>
            </value>
            <value>
                <fullName>ZenBusiness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>