force-app/main/default/objects/Lead/fields/Other_Business_Activity__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Activity__c</fullName>
    <label>Other Business Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>