force-app/main/default/objects/Lead/fields/Owned_Business_Before__c.field-meta.xml
<CustomField>
    <fullName>Owned_Business_Before__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owned Business Before?</label>
    <type>Checkbox</type>
</CustomField>