force-app/main/default/objects/Lead/fields/Owned_Business_Before_new__c.field-meta.xml
<CustomField>
    <fullName>Owned_Business_Before_new__c</fullName>
    <label>Owned Business Before</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>