force-app/main/default/objects/Lead/fields/P2C_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>P2C_Lead_ID__c</fullName>
    <label>P2C Lead ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>