force-app/main/default/objects/Lead/fields/Partner_Attached_Products__c.field-meta.xml
<CustomField>
    <fullName>Partner_Attached_Products__c</fullName>
    <label>Partner Attached Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affordable Tax</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Legal Plan</fullName>
            </value>
            <value>
                <fullName>Operating Agreement/EIN/Licenses</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>Resident Agent</fullName>
            </value>
            <value>
                <fullName>Rush Processing</fullName>
            </value>
            <value>
                <fullName>Expedite Processing</fullName>
            </value>
            <value>
                <fullName>Customer Website</fullName>
            </value>
            <value>
                <fullName>Domain</fullName>
            </value>
            <value>
                <fullName>Email Address</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>