force-app/main/default/objects/Lead/fields/Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Code__c</fullName>
    <label>Partner Code</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>