force-app/main/default/objects/Lead/fields/Partner_Fulfilled_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Fulfilled_Date__c</fullName>
    <label>Partner Fulfilled Date</label>
    <type>Date</type>
</CustomField>